<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/neigbourg_details_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteGrisé"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.NeigbourgDetailsActivity">

    <!-- A CardView that contains a TextView -->


    <ImageView

        android:id="@+id/neigbourg_details_avatar"
        android:layout_width="412dp"
        android:layout_height="275dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/neigbourg_details_favory_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:src="@drawable/ic_baseline_arrow_back_24_white"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/neigbourg_details_name_text_float"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="196dp"
        android:text="Caroline"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/neigbourg_details_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="379dp"
        android:layout_height="181dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neigbourg_details_avatar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="367dp"
            android:layout_height="165dp">

            <TextView
                android:id="@+id/neigbourg_details_name_text_phone"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_baseline_local_phone_24_pink"
                android:drawablePadding="4dp"
                android:text="TextViewPhone"
                app:layout_constraintStart_toStartOf="@+id/neigbourg_details_name_text_adresse"
                app:layout_constraintTop_toBottomOf="@+id/neigbourg_details_name_text_adresse" />

            <TextView
                android:id="@+id/neigbourg_details_name_text_social_media"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_baseline_sports_soccer_24_pink"
                android:drawablePadding="4dp"
                android:text="social-media"
                app:layout_constraintStart_toStartOf="@+id/neigbourg_details_name_text_phone"
                app:layout_constraintTop_toBottomOf="@+id/neigbourg_details_name_text_phone" />

            <TextView
                android:id="@+id/neigbourg_details_name_text"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="texviewNom"
                android:textColor="@color/colorNoir"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/neigbourg_details_name_text_adresse"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="12dp"
                android:drawableLeft="@drawable/ic_baseline_location_on_24_pink"
                android:drawablePadding="4dp"
                android:text="TextViewAdress"

                app:layout_constraintStart_toStartOf="@+id/neigbourg_details_name_text"
                app:layout_constraintTop_toBottomOf="@+id/neigbourg_details_name_text" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="378dp"
        android:layout_height="144dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:id="@+id/neigbourg_details_name_about_description"
                android:layout_width="340dp"
                android:layout_height="85dp"
                android:padding="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/neigbourg_details_about_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/neigbourg_details_about_title"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"


                android:layout_marginTop="4dp"
                android:text="A propos de moi"
                android:textColor="@color/colorNoir"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/neigbourg_details_favory_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neigbourg_details_avatar"
        app:layout_constraintVertical_bias="0.675"
        app:srcCompat="@drawable/ic_baseline_star_rate_24_gris" />


</android.support.constraint.ConstraintLayout>